product_docs/docs/jdbc_connector/42.2.8.1/04_installing_and_configuring_the_jdbc_connector/03_installing_a_deb_package_on_a_debian_or_ubuntu_host.mdx
---
title: "Installing a DEB Package on a Debian or Ubuntu Host"
---

<div id="installing_a_deb_package_on_a_debian_or_ubuntu_host" class="registered_link"></div>


To install a DEB package on a Debian or Ubuntu host, you must have credentials that allow access to the EnterpriseDB repository. To request credentials for the repository, visit [the EDB website](https://www.enterprisedb.com/repository-access-request).

The following steps will walk you through on using the EnterpriseDB apt repository to install a DEB package. When using the commands, replace the `username` and `password` with the credentials provided by EnterpriseDB.

1.  Assume superuser privileges:

    > `sudo su –`

2.  Configure the EnterpriseDB repository:

    > `sh -c 'echo "deb https://username:password@apt.enterprisedb.com/$(lsb_release -cs)-edb $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'`

3.  Add support to your system for secure APT repositories:

    > `apt-get install apt-transport-https`

4.  Add the EDB signing key:

    > `wget -q -O - https://username:password@apt.enterprisedb.com/edb-deb.gpg.key | apt-key add -`

5.  Update the repository metadata:

    > `apt-get update`

6.  Install DEB package:

    > `apt-get install edb-jdbc`

<div class="note">

<div class="title">

Note

</div>

By default, the Debian 9x and Ubuntu 18.04 platform installs Java version 10. Make sure you install Java version 8 on your system to run the EDB Java-based components.

</div>
